A06 First Commit with base information

--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -10,5 +10,6 @@
 <p>My Name: Michael Daniels</p>
 <p>Course name: Introduction to Web Development</p>
 <p>Course Number/Section: IS117-004</p>
+<p>&copy; Michael Daniels, 2023</p>
 </body>
 </html>
